Collapse navbar fix
Removed borders and center text-aligned.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -94,6 +94,11 @@ body {
     display: none;
 }
 
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+    border: none;
+    text-align: center;
+}
+
 
 
 
